<resources>
    <string name="app_name">White Noise Plus</string>
    <string name="play_audio">Play</string>
    <string name="white_label">White</string>
    <string name="pink_label">Pink</string>
    <string name="brown_label">Brown</string>
    <string name="blank" />
    <string name="volume_label">Volume</string>
    <string name="timer_label">Timer</string>
    <string name="dark_theme_toggle">App theme</string>
    <string name="play_over_toggle">Play Over Other Sounds</string>
    <string name="wave_interval_choice_title">Wave Interval</string>
    <string name="wave_interval_choice_dialog">Choose a wave interval:</string>
    <string-array name="theme_choices">
        <item>Auto</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="wave_interval_choices">
        <item>8 sec</item>
        <item>10 sec</item>
        <item>12 sec</item>
        <item>15 sec</item>
        <item>30 sec</item>
    </string-array>
    <string-array name="wave_interval_choice_values">
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>15</item>
        <item>30</item>
    </string-array>
    <string name="wave_interval_choice_default_value">8</string>
    <string name="settings_menu_title">Settings</string>
    <string name="app_settings_group_title">App Settings</string>
    <string name="dark_theme_summary">Specify the app\'s look and feel.</string>
    <string name="oscillate_interval_summary">Time between waves.
        Higher values are slower, lower values are faster.</string>
    <string name="play_over_summary">Plays noise over other sounds such as alarms, notifications,
    and music.</string>
    <string name="audio_pause">Pause</string>
    <string name="audio_play">Play</string>
    <string name="fade_label">Fade</string>
    <string name="wave_label">Waves</string>
    <string name="fade_volume_toast">Fade Volume</string>
    <string name="wave_volume_toast">Wavy Volume</string>
    <string name="notification_paused">Paused</string>
    <string name="notification_close">Close</string>
    <string name="notification_playing">Playing</string>
    <string name="notification_white_type">White Noise</string>
    <string name="notification_brown_type">Brown Noise</string>
    <string name="notification_pink_type">Pink Noise</string>
    <string name="notification_nature_type">Nature Sounds</string>
    <string name="notification_fire_type">Fireplace</string>
    <string name="notification_rain_type">Rain Sounds</string>
    <string name="nature_label">Nature</string>
    <string name="fire_label">Fire</string>
    <string name="rain_label">Rain</string>
    <string name="time_divider">:</string>
    <string name="time_set">Set</string>
    <string name="time_cancel">Cancel</string>

</resources>
