<?xml version="1.0" encoding="utf-8"?><!-- Used in tablets and in portrait mode for everything else -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dalbers.com.noise.MainActivity">

    <RadioGroup
        android:id="@+id/noiseTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/noiseTypeWhite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/white_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/noiseTypePink"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/pink_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/noiseTypeBrown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/brown_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RadioGroup>

    <TextView
        android:id="@+id/volumeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/volume_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <SeekBar
        android:id="@+id/volumeBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/waveVolumeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_wave"
            android:text=""
            android:textOff="@string/blank"
            android:textOn="@string/blank"
            android:textSize="0sp" />

        <ToggleButton
            android:id="@+id/decreaseVolumeToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_decrease"
            android:text=""
            android:textOff="@string/blank"
            android:textOn="@string/blank"
            android:textSize="0sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/timerLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="48dp"
            android:text="@string/timer_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <ImageButton
            android:id="@+id/timerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add" />

    </LinearLayout>

    <dalbers.com.timerpicker.TimerTextView
        android:id="@+id/timerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:visibility="invisible" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_action_playback_play_black"
        android:text="@string/play_audio" />

</LinearLayout>
