<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="dalbers.com.noise.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_audio"
        android:id="@+id/btnPlay"
        android:drawableLeft="@drawable/ic_action_playback_play_black"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:id="@+id/noiseTypes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/noiseTypeWhite"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/white_label"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/noiseTypePink"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/pink_label"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/noiseTypeBrown"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/brown_label"/>

    </RadioGroup>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#e6e6e6"
        android:layout_below="@+id/noiseTypes"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#e6e6e6"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"/>

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/volumeBar"
        android:layout_below="@+id/volumeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"

        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/volumeBar"
        android:id="@+id/linearLayout2">

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/waveVolumeToggle"
            android:textOff="@string/blank"
            android:textOn="@string/blank"
            android:textSize="0dp"
            android:drawableTop="@drawable/ic_wave"/>
        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/decreaseVolumeToggle"
            android:textOff="@string/blank"
            android:textOn="@string/blank"
            android:textSize="0dp"
            android:drawableTop="@drawable/ic_decrease" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/volume_label"
        android:id="@+id/volumeLabel"
        android:layout_below="@+id/divider1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider2"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout3"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/timer_label"
            android:id="@+id/timerLabel"
            android:layout_marginRight="48dp"
            android:layout_gravity="center_vertical"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timerButton"
            android:src="@drawable/ic_add"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout3"
        android:layout_centerHorizontal="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/countdownTime"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal"
            android:cursorVisible="false"
            android:visibility="invisible"/>
    </LinearLayout>

</RelativeLayout>
